--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
+@font-face{
+    font-family: Buttermilk;
+    src: url(./Buttermilk.woff2);
+
+}
+
+
 *{
     margin: 0;
     padding: 0;
@@ -10,7 +17,7 @@ html,body{
 #big{
     height: 100%;
     width:100%;
-    background-image: url(bg.jpeg);
+    background-image: url(./bg.webp));
     
     background-size: cover;
 }
