fonts adn images

--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ html,body{
 #big{
     height: 100%;
     width:100%;
-    background-image: url(./bg.webp));
+    background-image: url(./bg\ \(1\).webp);
     
     background-size: cover;
 }
